eks/discovery_service_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discovery-service
  labels:
    app: discovery-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: discovery-service
  template:
    metadata:
      labels:
        app: discovery-service
    spec:
      containers:
        - name: discovery-service
          image: cloud.canister.io:5000/akibrat95/discovery-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8761
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8761
            initialDelaySeconds: 60
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8761
            initialDelaySeconds: 60
            periodSeconds: 10
      imagePullSecrets:
        - name: canistercred
