eks/product_service_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
  labels:
    app: product-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
    spec:
      containers:
        - name: product-service
          image: canister.io:5000/akibrat95/product-service:latest
          ports:
            - containerPort: 8082
      imagePullSecrets:
        - name: canistercred
