eks/stats_service_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stats-service
  labels:
    app: stats-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stats-service
  template:
    metadata:
      labels:
        app: stats-service
    spec:
      containers:
        - name: stats-service
          image: canister.io:5000/akibrat95/stats-service:latest
          ports:
            - containerPort: 8083
      imagePullSecrets:
        - name: canistercred
