eks/user_service_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  labels:
    app: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: cloud.canister.io:5000/akibrat95/user-service:latest
          ports:
            - containerPort: 8081
      imagePullSecrets:
        - name: canistercred
