eks/mysql_service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  type: NodePort
  ports:
    - port: 3306
      targetPort: 3306
      nodePort: 30306
      protocol: TCP
  selector:
    app: mysql
