eks/product_service_service.yml
apiVersion: v1
kind: Service
metadata:
  name: product-service
spec:
  type: NodePort
  ports:
    - port: 8082
      targetPort: 8082
      nodePort: 32002
      protocol: TCP
  selector:
    app: product-service
