eks/stats_service_service.yml
apiVersion: v1
kind: Service
metadata:
  name: stats-service
spec:
  type: NodePort
  ports:
    - port: 8083
      targetPort: 8083
      nodePort: 32003
      protocol: TCP
  selector:
    app: stats-service
