eks/user_service_service.yml
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  type: NodePort
  ports:
    - port: 8081
      targetPort: 8081
      nodePort: 32001
      protocol: TCP
  selector:
    app: user-service
